--- a/frontend/src/components/admin/layouts/adminLayout.css
+++ b/frontend/src/components/admin/layouts/adminLayout.css
@@ -11,9 +11,19 @@
 }
 .nav-item:hover{
     background-color: rgb(47, 163, 109);
+    color:white
+}
+.nav-item:hover .nav-text,.nav-item:hover .nav-logo{
+    color:white
 }
 .navLink{
     text-decoration: none;
     font-weight: bold;
     color: white;
 }
+
+
+.active .nav-text,.active .nav-logo{
+    color: rgb(47, 163, 109); /* Set the desired active color */
+    font-weight: bold; /* Optional: make the active link bold */
+  }
